...
                }
            }

            // Name and about
            if (profile.name != null || profile.about != null) {
                item {
                    ProfileSectionCard(title = "Profile") {
                        if (profile.name != null) {
                            Text(
                                profile.name!!,
                                style = MaterialTheme.typography.headlineMedium,
                            )
                        }
...
